# invest_b/openapi.yaml
@@ -45,13 +45,13 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: '#/components/schemas/Error_REG'
             application/xml:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: '#/components/schemas/Error_REG'
             application/x-www-form-urlencoded:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: '#/components/schemas/Error_REG'
   /api/auth/log/:
     post:
       tags:
@@ -87,13 +87,13 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: '#/components/schemas/Error_LOG'
             application/xml:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: '#/components/schemas/Error_LOG'
             application/x-www-form-urlencoded:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: '#/components/schemas/Error_LOG'
   /api/auth/confirm_repeat/:
     post:
       tags:
@@ -129,14 +129,14 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: '#/components/schemas/Error_CONFIRMREPEAT'
             application/xml:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: '#/components/schemas/Error_CONFIRMREPEAT'
             application/x-www-form-urlencoded:
               schema:
-                $ref: '#/components/schemas/Error'
-          
+                $ref: '#/components/schemas/Error_CONFIRMREPEAT'
+
 components:
   schemas:
     UserReg:
@@ -173,14 +173,11 @@ components:
           example: 0
         message:
           type: string
-          example: Logged in profik0077@mail.ru
-        refresh:
-          type: string
-          example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0b2tlbl90eXBlIjoicmVmcmVzaCIsImV4cCI6MTcwODE5MzEwOCwiaWF0IjoxNzA4MTA2NzA4LCJqdGkiOiJjYjBhYTE2OTc4ZmY0YTllYmU4ZTczMjY0NTkzN2VjOCIsInVzZXJfaWQiOjIsImVtYWlsIjoicHJvZmlrMDA3N0BtYWlsLnJ1In0.FgSoWbczURad4SB0wQB_f9F_fedV8dg0FlJGPHStoT4
-        access:
+          example: SUCCES LOG
+        access_token:
           type: string
           example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0b2tlbl90eXBlIjoiYWNjZXNzIiwiZXhwIjoxNzA4MTA3MDA4LCJpYXQiOjE3MDgxMDY3MDgsImp0aSI6IjI2YzcyMzk5OTA1ODRlNjA4MzQzOThiN2QwOTg2YTI5IiwidXNlcl9pZCI6MiwiZW1haWwiOiJwcm9maWswMDc3QG1haWwucnUifQ.OYMRmPXBj-A-Qcn-hQAM9kcOD4Rva2F9ugkUruNrEdQ
-        
+
     ApiResponse:
       type: object
       properties:
@@ -193,8 +190,8 @@ components:
         access_token:
           type: string
           example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0b2tlbl90eXBlIjoiYWNjZXNzIiwiZXhwIjoxNzA4MTA3MDA4LCJpYXQiOjE3MDgxMDY3MDgsImp0aSI6IjI2YzcyMzk5OTA1ODRlNjA4MzQzOThiN2QwOTg2YTI5IiwidXNlcl9pZCI6MiwiZW1haWwiOiJwcm9maWswMDc3QG1haWwucnUifQ.OYMRmPXBj-A-Qcn-hQAM9kcOD4Rva2F9ugkUruNrEdQ
-          
-    Error:
+
+    Error_REG:
       type: object
       required:
         - resultCode
@@ -205,6 +202,33 @@ components:
           example: 1
         message:
           type: string
+          example: 1. Passwords don't match 2. user with this email already exists. 3. user with this phone already exists. 4. There is no such mail
+
+    Error_LOG:
+      type: object
+      required:
+        - resultCode
+        - message
+      properties:
+        resultCode:
+          type: integer
+          example: 1
+        message:
+          type: string
+          example: 1. ACCOUNT NOT REGISTER 2. User is disabled. 3. Incorrect password.
+
+    Error_CONFIRMREPEAT:
+      type: object
+      required:
+        - resultCode
+        - message
+      properties:
+        resultCode:
+          type: integer
+          example: 1
+        message:
+          type: string
+          example: 1. email address incorrect
           
     ConfirmRes:
       type: object
